--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ tfplan.out
 crash.log
 crash.*.log
 
+ec2dev_key
+ec2dev_key.pub
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
